# sailfish-multimedia-cameraextensions

./: .gitignore  CMakeLists.txt  README.org  SFMultimediaCameraExtensionsConfig.cmake.in
rpm/: sailfish-multimedia-cameraextensions.spec
src/: CMakeLists.txt  effectsmodel.cpp  effectsmodel.h  exposuremodel.cpp  exposuremodel.h  flashmodel.cpp  flashmodel.h  focusmodel.cpp  focusmodel.h  isomodel.cpp  isomodel.h  plugin.cpp  resolutionmodel.cpp  resolutionmodel.h  whitebalancemodel.cpp  whitebalancemodel.h
src/quick/: CMakeLists.txt  Makefile  qmldir  sf_mulitmedia_cameraextensions_quickplugin.cpp  sf_mulitmedia_cameraextensions_quickplugin.h
